padding and spacing in submission fixed with timeline color

--- a/assets/CSS/submission.css
+++ b/assets/CSS/submission.css
@@ -265,6 +265,9 @@ html {
     margin: auto auto 10px auto;
     padding-right: 10%;
   }
+  .mb-0{
+      margin-bottom: 4% !important;
+  }
 }
 
 /* ==========FOOTER=========== */
